--- a/semana2/bugfixes/index.css
+++ b/semana2/bugfixes/index.css
@@ -88,6 +88,7 @@ div img {
 }
 
 
+
 /**
   *
   *  ESTILOS COMPRAR 
@@ -101,6 +102,7 @@ div:last-child {
 
 table {
     width: 60%;
+    text-align: center;
 }
 
 td button {
