--- a/semana2/bugfixes/index.css
+++ b/semana2/bugfixes/index.css
@@ -34,9 +34,6 @@ div>p:first-child {
     display: inline;
 }
 
-div img {
-    background: black;
-}
 
 .botao-amarelo {
     background-color: #ffaf43;
@@ -57,7 +54,7 @@ div img {
 }
 
 .icone {
-    height: 15px;
+    width: 15px;
 }
 
 
