botões de compras estão mudando de cor no clique e ao passar o mouse, adicionei uma nova classe a eles utilizei :action e :hover

--- a/semana2/bugfixes/index.css
+++ b/semana2/bugfixes/index.css
@@ -48,6 +48,14 @@ div>p:first-child {
     background-color: #c44f00;
 }
 
+.botao-amarelo2:hover {
+    background-color: #c44f00;
+}
+
+.botao-amarelo2:action {
+    background-color: white
+}
+
 .container {
     height: 500px;
     text-align: center;
