--- a/semana2/bugfixes/index.css
+++ b/semana2/bugfixes/index.css
@@ -20,6 +20,10 @@ h2 {
 input {
     height: 20px;
     width: 500px;
+    border-top: 0px;
+    border-right: 0px;
+    border-left: 0px;
+    border-width: 3px;
 }
 
 button:focus {
