--- a/semana2/bugfixes/index.css
+++ b/semana2/bugfixes/index.css
@@ -8,7 +8,7 @@
     margin: 0;
     padding: 0;
     font-family: 'Lato', sans-serif;
-    
+
 }
 
 h2 {
@@ -113,6 +113,9 @@ div:last-child {
 table {
     width: 60%;
     text-align: center;
+    position: relative; 
+    left: 280px; 
+    
 }
 
 td button {
@@ -130,15 +133,12 @@ td button {
 
 
 #back-button {
-    background-color: white;
     width: 100px;
     height: 20px;
-    border: 1px solid black;
-    border-radius: 5px;
     font-size: 10px;
     color: black;
+    position: absolute;
+    left: 650px;
+    top:450px;
 }
 
-#back-button:hover {
-    background-color: #635a3d
-}
