--- a/semana4/planner/index.css
+++ b/semana4/planner/index.css
@@ -1,19 +1,48 @@
 *{
-  width: 100%;
+  margin: 0;
   padding: 0;
+  font-family: 'Crafty Girls', cursive;
   
 }
 
 header {
     display: flex;
-    justify-content: space-between;
+    align-items: center;
+	justify-content: center;
+	flex-wrap: wrap;
     border-bottom: 1px solid black;
     border-collapse: collapse;
-    height: 20px;
+    height: 50px;
+    background-color: #e0b0ff;
+    
+}
+
+input {
+    margin: 0 10px;
+}
+
+select {
+    margin: 0 10px;
+}
+
+button {
+    margin: 0 10px;
 }
 
 h1 {
     text-align: center;
+    margin: 15px 0px;
+}
+
+#planejamento-semanal {
+    display: flex;
+    align-items: center;
+	justify-content: space-evenly;
+	flex-wrap: wrap;
+}
+
+img {
+    width: 30%;
 }
 
 table {
@@ -21,15 +50,23 @@ table {
     border-collapse: collapse;
     table-layout: fixed;
     width: 100%;
+    background-color: honeydew;
 }
 
 th{
     border: 1px solid black;
     text-align: center;
+    background-color: #e0b0ff;
 }
 
 td{
     border: 1px solid black;
     height: 300px;
+    text-align: center;
+}
+
+ul {
+    list-style-position: inside;
+    list-style-type: circle;
 }
 
